# nps_automatico

./: .env.example  .gitignore  README.md  docker-compose.yml  grafo.py  main.py  pyproject.toml
backend/: .env.example  main.py  pyproject.toml  worker.py
backend/bd/: database.sql
backend/docker/: backend.dockerfile
backend/src/app/api/: __init__.py
backend/src/app/api/routes/: campos.py  input_dados.py  metadados.py  prompts.py
backend/src/app/controllers/: input_dados.py
backend/src/app/domain/: graph.py  models.py
backend/src/app/infrastructure/: database.py  nodes.py
backend/src/app/infrastructure/db/: db_access.py
backend/src/app/prompts/system/: Extrair Metadados.md  Resolução e Eficiência.md
backend/src/app/utils/: file.py  validacoes.py
bd/: database.sql
docker/: worker.dockerfile
docs/: README.md  api-specification.md  architecture.md  database-schema.md  ddd-overview.md  domain-model.md
docs/adr/: 001-langgraph-parallel-evaluation.md
docs/modules/: modulo-avaliacao.md  modulo-relatorios.md
frontend/: .env.example  Dockerfile  nginx.conf  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Sidebar.css  Sidebar.jsx
frontend/src/pages/: Avaliacao.jsx  AvaliacaoPersonalizada.jsx  CamposManager.jsx  PromptManager.jsx
src/app/: config.py
src/app/api/: __init__.py
src/app/api/routes/: input_dados.py
src/app/controllers/: input_dados.py
src/app/domain/: graph.py  models.py
src/app/infrastructure/: nodes.py
src/app/infrastructure/db/: connection.py
src/app/infrastructure/messenger/: consumer.py  (+2 more)
(+2 files in other folders)
